--- a/core/static/core/css/estilos.css
+++ b/core/static/core/css/estilos.css
@@ -4,50 +4,77 @@
     justify-content: center;
   }
 
-  .card {
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
-    background-color: rgb(254, 246, 236);
-  }
+.card {
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  background-color: rgb(254, 246, 236);
+}
 
-  .card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
 
-  .card h3 {
-    margin: 0;
-    font-size: 20px;
-  }
+.card h3 {
+  margin: 0;
+  font-size: 20px;
+}
 
-  .card p {
-    margin: 0;
-    font-size: 16px;
-    color: #888;
-  }
+.card p {
+  margin: 0;
+  font-size: 16px;
+  color: #888;
+}
 
-  .card .price {
-    margin-top: 10px;
-    font-size: 18px;
-    color: #333;
-    font-weight: bold;
-  }
+.card .price {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #333;
+  font-weight: bold;
+}
 
-  .card .highlight {
-    background-color: yellow;
-  }
+.card .highlight {
+  background-color: yellow;
+}
 
-  h1{
-    padding-top: 2%;
-    text-align: center;
-  }
-  body{
-    background-color: #D6E8DB;
-  }
+h1{
+  padding-top: 0%;
+  text-align: center;
+  background-color: #74B49B;
+  color: white;
+}
+body{
+  background-color: #f0e7cd;
+}
+
+/* NAVBAR */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #74B49B;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #A7D7C5;
+}
