--- a/core/templates/core/menu.html
+++ b/core/templates/core/menu.html
@@ -1,30 +1,20 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'core/css/estilos.css'  %}"> 
+{% extends 'core/base.html' %}
 
-</head>
-<body>
-    <h1>Menú del Restaurante</h1>
-    
-    <div class="card-container">
-        {% for plato in menu %}
-          <div class="card{% if plato.destacado %} highlight{% endif %}">
-            <img src="{{ plato.imagen_url }}" alt="{{ plato.nombre }}">
-            <h3>{{ plato.nombre }}</h3>
-            <p>{{ plato.descripcion }}</p>
-            <p class="price">{{ plato.precio }} CLP</p>
-          </div>
-        {% empty %}
-          <p>No hay platos en el menú.</p>
-        {% endfor %}
-    </div>
+{% load static%}
 
-</body>
-</html>
+{% block contenido%}
+
+  <div class="card-container">
+      {% for plato in menu %}
+        <div class="card highlight">
+          <img src="{{ plato.imagen_url }}" alt="{{ plato.nombre }}">
+          <h3>{{ plato.nombre }}</h3>
+          <p>{{ plato.descripcion }}</p>
+          <p class="price">{{ plato.precio }} CLP</p>
+        </div>
+      {% empty %}
+        <p>No hay platos en el menú.</p>
+      {% endfor %}
+  </div>
+
+{%endblock%}
