--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="{% static 'core/css/estilos.css'  %}">
 </head>
 <body>
-    <h1 style="text-align: center;">Menú</h1>
-  
+        <h1>Menú</h1>
     <nav>
     <ul>
         <li><a href="{% url 'destacados' %}"> Platos destacados </a></li>
